--- a/config/path_follower_config.yaml
+++ b/config/path_follower_config.yaml
@@ -9,7 +9,7 @@ path_follower:
     lookahead_ratio: 0.4         # Dynamic lookahead: distance = velocity * ratio
     
     # Vehicle parameters
-    wheelbase: 0.33              # Vehicle wheelbase (m) - matches lattice planner
+    wheelbase: 0.324              # Vehicle wheelbase (m) - matches lattice planner
     max_steering_angle: 0.4      # Maximum steering angle (radians, ~23 degrees)
     
     # Speed control
@@ -29,14 +29,14 @@ path_follower:
     anticipation_distance: 2.0     # Look-ahead distance for corner detection (m)
     
     # Controller Selection
-    use_stanley: false            # Controller type: true = Stanley controller, false = Pure Pursuit controller
+    use_stanley: true             # Controller type: true = Stanley controller, false = Pure Pursuit controller
     
     # Stanley controller parameters
-    stanley_k_e: 2.8             # Cross-track error gain for Stanley controller (reduced for less oscillation)
-    stanley_k_soft: 1.0          # Softening constant to prevent division by zero (increased for smoother response)
+    stanley_k_e: 1.5             # Cross-track error gain for Stanley controller (reduced for less oscillation)
+    stanley_k_soft: 0.3          # Softening constant to prevent division by zero (reduced for more responsive steering)
     stanley_heading_gain: 1.0    # Heading error gain (less than 1.0 for stability)
-    stanley_max_cross_track: 0.15 # Maximum cross-track correction (rad) to prevent overshoot
-    stanley_steering_smoothing: 0.3 # Steering smoothing factor (0 = no smoothing, 1 = maximum smoothing)
+    stanley_max_cross_track: 0.2 # Maximum cross-track correction (rad) to prevent overshoot
+    stanley_steering_smoothing: 0.1 # Steering smoothing factor (reduced for more responsive steering)
     
     # Safety parameters
     max_lateral_error: 2.0       # Maximum lateral error before speed reduction
