--- a/config/path_follower_config.yaml
+++ b/config/path_follower_config.yaml
@@ -4,32 +4,32 @@ path_follower:
   ros__parameters:
     # Pure Pursuit parameters
     lookahead_distance: 2.5       # Base lookahead distance (m)
-    min_lookahead: 0.5           # Minimum lookahead distance (m) - slightly increased
+    min_lookahead: 0.3           # Minimum lookahead distance (m) - slightly increased
     max_lookahead: 3.0           # Maximum lookahead distance (m)
     lookahead_ratio: 0.4         # Dynamic lookahead: distance = velocity * ratio
     
     # Vehicle parameters
-    wheelbase: 0.324              # Vehicle wheelbase (m) - matches lattice planner
+    wheelbase: 0.35              # Vehicle wheelbase (m) - matches lattice planner
     max_steering_angle: 0.4      # Maximum steering angle (radians, ~23 degrees)
     
     # Speed control
     target_speed: 6.0            # Fallback target speed (m/s) when no planner velocity - INCREASED
     max_speed: 8.0               # Maximum speed (m/s) - INCREASED
-    min_speed: 2.0              # Minimum speed (m/s) - INCREASED
+    min_speed: 1.5              # Minimum speed (m/s) - INCREASED
     speed_lookahead_gain: 0.5    # Speed adjustment gain
     
     # Planner velocity integration
     use_planner_velocity: true   # Use velocity from planner (PathWithVelocity)
-    velocity_scale_factor: 1.3   # Scale factor for planner velocity (80% of planned velocity)
+    velocity_scale_factor: 1.4   # Scale factor for planner velocity (80% of planned velocity)
     velocity_smoothing: 0.3      # Smoothing factor for velocity changes
     
     # Corner handling
-    corner_detection_angle: 0.3    # Corner detection threshold (radians) (in degrees: ~17 degrees)
-    corner_speed_factor: 0.7       # Speed reduction factor in corners
+    corner_detection_angle: 0.25    # Corner detection threshold (radians) (in degrees: ~17 degrees)
+    corner_speed_factor: 1.3       # Speed reduction factor in corners
     anticipation_distance: 1.5     # Look-ahead distance for corner detection (m)
     
     # Controller Selection
-    use_stanley: true             # Controller type: true = Stanley controller, false = Pure Pursuit controller
+    use_stanley: false             # Controller type: true = Stanley controller, false = Pure Pursuit controller
     
     # Stanley controller parameters
     stanley_k_e: 1.55             # Cross-track error gain for Stanley controller (reduced for less oscillation)
