--- a/config/controller_config.yaml
+++ b/config/controller_config.yaml
@@ -13,14 +13,14 @@ path_follower:
     max_steering_angle: 0.4      # Maximum steering angle (radians, ~23 degrees)
     
     # Speed control
-    target_speed: 6.0            # Fallback target speed (m/s) when no planner velocity - INCREASED
+    target_speed: 1.0            # Fallback target speed (m/s) when no planner velocity - REDUCED
     max_speed: 8.0               # Maximum speed (m/s) - INCREASED
-    min_speed: 1.5              # Minimum speed (m/s) - INCREASED
+    min_speed: 0.5              # Minimum speed (m/s) - REDUCED
     speed_lookahead_gain: 0.5    # Speed adjustment gain
     
     # Planner velocity integration
     use_planner_velocity: true   # Use velocity from planner (PathWithVelocity)
-    velocity_scale_factor: 1.0   # Scale factor for planner velocity (80% of planned velocity)
+    velocity_scale_factor: 0.1   # Scale factor for planner velocity (10% of planned velocity)
     velocity_smoothing: 0.3      # Smoothing factor for velocity changes
     
     # Corner handling
